WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200466
REGRESSION: Cannot tap on any buttons on m.naver.com home screen on iPad
https://bugs.webkit.org/show_bug.cgi?id=200466
Summary
REGRESSION: Cannot tap on any buttons on m.naver.com home screen on iPad
Antti Koivisto
Reported
2019-08-06 03:33:59 PDT
The page calls preventDefault() for a mouse event generated by site specific quirk.
Attachments
patch
(1.99 KB, patch)
2019-08-06 03:43 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-08-06 03:42:06 PDT
<
rdar://problem/52571754
>
Antti Koivisto
Comment 2
2019-08-06 03:43:41 PDT
Created
attachment 375616
[details]
patch
WebKit Commit Bot
Comment 3
2019-08-06 08:37:34 PDT
Comment on
attachment 375616
[details]
patch Clearing flags on attachment: 375616 Committed
r248295
: <
https://trac.webkit.org/changeset/248295
>
WebKit Commit Bot
Comment 4
2019-08-06 08:37:36 PDT
All reviewed patches have been landed. Closing bug.
alan baradlay
Comment 5
2019-08-06 11:07:33 PDT
Comment on
attachment 375616
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=375616&action=review
> Source/WebCore/page/Quirks.cpp:303 > + // FIXME: Maybe this quirk should be disabled for "m." subdomains on all sites? These are generally mobile sites that don't need mouse events.
SimulatedMouseEventsDispatchPolicy should definitely be Deny on mobile pages for example when the user explicitly asks for the mobile version.
Geoffrey Garen
Comment 6
2019-08-06 11:13:16 PDT
Comment on
attachment 375616
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=375616&action=review
>> Source/WebCore/page/Quirks.cpp:303 >> + // FIXME: Maybe this quirk should be disabled for "m." subdomains on all sites? These are generally mobile sites that don't need mouse events. > > SimulatedMouseEventsDispatchPolicy should definitely be Deny on mobile pages for example when the user explicitly asks for the mobile version.
My understanding is that we only set WebsiteSimulatedMouseEventsDispatchPolicy::Allow when in desktop mode. (See WebPageProxy::effectiveContentModeAfterAdjustingPolicies.) I wonder how we ended up in desktop mode at all on an m. site.
Antti Koivisto
Comment 7
2019-08-06 13:04:02 PDT
If you go to m.naver.com (or any URL) on iPad it will be loaded by default in desktop mode. Or do we have heuristics somewhere that should figure out it is a mobile site?
Antti Koivisto
Comment 8
2019-08-06 13:13:11 PDT
If you go to the top naver.com you get redirected to the m. subdomain only in mobile mode. However there is no automatic redirect back to the main site in desktop mode. If you for example have an existing bookmark it will probably point to the m. site.
Geoffrey Garen
Comment 9
2019-08-06 14:45:40 PDT
(In reply to Antti Koivisto from
comment #7
)
> If you go to m.naver.com (or any URL) on iPad it will be loaded by default > in desktop mode. Or do we have heuristics somewhere that should figure out > it is a mobile site?
Always desktop mode, modulo a short list of exceptions.
Geoffrey Garen
Comment 10
2019-08-06 14:46:00 PDT
(In reply to Antti Koivisto from
comment #8
)
> If you go to the top naver.com you get redirected to the m. subdomain only > in mobile mode. However there is no automatic redirect back to the main site > in desktop mode. If you for example have an existing bookmark it will > probably point to the m. site.
Makes sense.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug